# Azure

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
cfg/: log_cfg.yml  log_root_cfg.yml  test_cfg.yml
example/: echo_server.cpp
include/: address.h  application.h  azure.h  bytearray.h  config.h  daemon.h  endian_.h  env.h  fdmanager.h  fiber.h  hook.h  iomanager.h  log.h  macro.h  mutex.h  noncopyable.h  scheduler.h  socket.h  socket_stream.h  stream.h  tcp_server.h  thread.h  timer.h  uri.h  uri.rl  util.h
include/http/: http.h  http11_parser.cc  http11_parser.rl  http11_parser.rl.cc  http_connection.h  http_parser.h  http_server.h  http_session.h  httpclient_parser.cc  httpclient_parser.rl  httpclient_parser.rl.cc  servlet.h
log/: log.txt
samples/: my_http_server.cpp
src/: address.cpp  application.cpp  bytearray.cpp  config.cpp  config.h  daemon.cpp  env.cpp  fdmanager.cpp  fiber.cpp  hook.cpp  http_session.cpp  iomanager.cpp  log.cpp  log.h  mutex.cpp  scheduler.cpp  singleton.h  socket.cpp  socket_stream.cpp  stream.cpp  tcp_server.cpp  thread.cpp  timer.cpp  uri.rl.cc  util.cpp
src/http/: http.cpp  http_connection.cpp  http_parser.cpp  http_parser_.cpp  http_server.cpp  http_session.cpp  servlet.cpp
tests/: test.cpp  test_address.cpp  test_application.cpp  test_bytearray.cpp  test_config.cpp  test_daemon.cpp  test_env.cpp  test_fiber.cpp  test_hook.cpp  test_http.cpp  test_http_connection.cpp  test_http_parser.cpp  test_http_server.cpp  test_iomanager.cpp  test_log.cpp  test_scheduler.cpp  test_socket.cpp  test_tcp_server.cpp  test_thread.cpp  test_uri.cpp  test_util.cpp
